# text_split

./: LICENSE  README.md  setup.cfg  setup.py
src/text_split/: split.py
text_split/: split.py
