[metadata]
name = text-split
version = 0.1.1
author = ZhengxuanQian
author_email = gokinjolno112358@gmail.com
description = Split file by line number
long_description = file: README.md
long_description_type = text/markdown
url = https://github.com/i1123581321/text_split
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    split = text_split.split:main